Closed Bug 1803222 Opened 3 years ago Closed 3 years ago

Worklet.addModule should return SyntaxError if fails to parse the moduleURL

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: allstars.chh, Assigned: allstars.chh)

Details

Attachments

(1 file)

See https://html.spec.whatwg.org/multipage/worklets.html#dom-worklet-addmodule, step 3

  1. Parse moduleURL relative to outsideSettings.
  2. If this fails, then return a promise rejected with a "SyntaxError" DOMException.
Pushed by allstars.chh@gmail.com: https://hg.mozilla.org/integration/autoland/rev/caf8f23be93d Return SyntaxError if fails to parse the moduleURL. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: