Bug 1803222 - Return SyntaxError if fails to parse the moduleURL. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D163501